# ritual_site

./: .env  db.sqlite3  main.py  manage.py  pyproject.toml
main_app/: admin.py  apps.py  form.py  models.py  serializer.py  urls.py  views.py
main_app/management/commands/: bot.py
main_app/migrations/: 0001_initial.py  0002_client_send.py  0003_alter_client_phone.py  0004_remove_client_agreement.py
main_app/templates/main_app/: discount.html  homepage.html  policy.html
ritual/: asgi.py  settings.py  urls.py  wsgi.py
